--- a/src/app/card-component/card-component.component.scss
+++ b/src/app/card-component/card-component.component.scss
@@ -18,7 +18,7 @@
     margin: 0 8px 16px;
     padding: 16px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     transition: all 0.2s ease-in-out;
