--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -247,10 +247,6 @@
   </button>
   <span>Check Covid-19 Vaccine Availability</span>
   <div class="spacer"></div>
-
-  <span><em>Data Source: <u>https://apisetu.gov.in/public/api/cowin</u></em></span>
-  <div class="spacer"></div>
-
     <a aria-label="twitter" target="_blank" rel="noopener" href="https://twitter.com/perceptionsguy" title="Twitter">
       <svg id="twitter-logo" height="24" data-name="Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
         <rect width="400" height="400" fill="none"/>
@@ -309,6 +305,8 @@
         <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z" fill="#1976d2"/><path d="M0 0h24v24H0z" fill="none"/></svg>
       </a>
       <br/>
+      <span><em>Data Source: <u>https://apisetu.gov.in/</u></em></span>
+
     <!-- </div> -->
       
 
