--- a/src/app/date-picker.component.html
+++ b/src/app/date-picker.component.html
@@ -1,4 +1,4 @@
-<mat-form-field appearance="fill">
+<!-- <mat-form-field appearance="fill">
     <mat-label>Select a Date, we'll find a slot +/- 3 days from then </mat-label>
     <mat-date-range-input [rangePicker]="picker">
       <input matStartDate (dateChange)="selectStart.emit($event.value)">
@@ -6,4 +6,10 @@
     </mat-date-range-input>
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-date-range-picker #picker ></mat-date-range-picker>
+</mat-form-field> -->
+<mat-form-field  appearance="fill">
+  <mat-label>Choose a date</mat-label>
+  <input matInput [min]="minDate" [matDatepicker]="picker" (dateChange)="selectStart.emit($event.value)">
+  <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+  <mat-datepicker #picker></mat-datepicker>
 </mat-form-field>
