--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -267,7 +267,7 @@
       
     </form>
     </mat-card-content></mat-card>
-    <app-find-district-sessions *ngIf="formEnabled"></app-find-district-sessions>
+    <app-find-district-sessions (resultsLoaded)="setResults($event)" *ngIf="formEnabled"></app-find-district-sessions>
   </div>
     <ng-template #elseBlock>
       <h2 >Showing all available slots for {{pincode}}</h2>
