--- a/src/app/card-component/card-component.component.html
+++ b/src/app/card-component/card-component.component.html
@@ -1,4 +1,4 @@
-<mat-card class="card" *ngIf="model.sessions.length">
+<mat-card class="card mat-elevation-z3" *ngIf="model.sessions.length">
     <mat-card-header>
       <mat-card-title>{{model.name}}</mat-card-title>
       <mat-card-subtitle>{{model.district_name}}, {{model.block_name}} </mat-card-subtitle>
