--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -277,11 +277,11 @@
         <mat-button-toggle color="primary" [checked] = "hideZeroCapacitySessions" value="1">Hide centers with 0 Capacity</mat-button-toggle>
       </mat-button-toggle-group>
       <mat-button-toggle-group name="fontStyle" (change)="setFlag($event, false)">
-        <mat-button-toggle color="primary" value="18">Sessions for 18 - 45</mat-button-toggle> 
+        <mat-button-toggle color="primary" value="18">Sessions for 18-45</mat-button-toggle> 
          <mat-button-toggle value="45">Sessions for 45+</mat-button-toggle>
         <mat-button-toggle checked = "true" value="0">Show All Sessions</mat-button-toggle>
       </mat-button-toggle-group>
-      <cdk-virtual-scroll-viewport *ngIf="filteredResults.length; else noResErr" class="example-viewport" itemSize="10">
+      <cdk-virtual-scroll-viewport *ngIf="filteredResults.length; else noResErr" class="viewport" itemSize="10">
       <div  *cdkVirtualFor="let res of filteredResults">
         <app-card-component [hideZeroCapacitySessions]="hideZeroCapacitySessions" [model]="res"></app-card-component>
       </div>
