--- a/src/app/datepicker-component/date-picker.component.html
+++ b/src/app/datepicker-component/date-picker.component.html
@@ -1,6 +1,6 @@
 <mat-form-field appearance="fill">
   <mat-label>Choose a date</mat-label>
-  <input matInput [matDatepickerFilter]="disablePrev" [matDatepicker]="picker" (dateChange)="emitDate($event.value)">
+  <input matInput [matDatepickerFilter]="disablePrev" autocomplete="off" [matDatepicker]="picker" (dateChange)="emitDate($event.value)">
   <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
   <mat-datepicker #picker></mat-datepicker>
 </mat-form-field>
