--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -226,7 +226,7 @@
       arrow_backward
       </mat-icon>
   </button>
-  <span>Check Covid-19 Vaccine Availability</span>
+  <span class="title">Check Covid-19 Vaccine Availability</span>
   <div class="spacer"></div>
     <a aria-label="twitter" target="_blank" rel="noopener" href="https://twitter.com/perceptionsguy" title="Twitter">
       <svg id="twitter-logo" height="24" data-name="Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
